# wordlist

./: Cargo.toml  build.rs  pgpfone_three_syllable.txt  pgpfone_two_syllable.txt
